# app/docs/swagger.json
@@ -60,52 +60,6 @@
                     }
                 }
             },
-            "put": {
-                "description": "Update an existing redirect URL by its model",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "redirect"
-                ],
-                "summary": "Update a redirect URL",
-                "parameters": [
-                    {
-                        "description": "URL Model",
-                        "name": "url",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Url"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Url"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "Create a new redirect URL with optional custom lopper",
                 "consumes": [
@@ -120,12 +74,12 @@
                 "summary": "Create a new redirect URL",
                 "parameters": [
                     {
-                        "description": "URL Model",
+                        "description": "request body",
                         "name": "url",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Url"
+                            "$ref": "#/definitions/model.UrlRequest"
                         }
                     }
                 ],
@@ -164,7 +118,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Lopper Value",
+                        "description": "lopper value",
                         "name": "lopper",
                         "in": "query",
                         "required": true
@@ -172,11 +126,7 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "Successfully Deleted",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
+                        "description": "Successfully Deleted"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -207,14 +157,67 @@
                 "tags": [
                     "redirect"
                 ],
-                "summary": "Get specific redirect URL",
+                "summary": "Get redirect URL by ID",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "URL ID",
+                        "description": "ID",
                         "name": "id",
                         "in": "path",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Url"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update an existing redirect URL by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "redirect"
+                ],
+                "summary": "Update a redirect URL by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "request body",
+                        "name": "url",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.UrlRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -252,7 +255,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "URL ID",
+                        "description": "ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -260,11 +263,7 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "Successfully Deleted",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
+                        "description": "Successfully Deleted"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -296,7 +295,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Lopper Value",
+                        "description": "lopper value",
                         "name": "redirect",
                         "in": "path",
                         "required": true
@@ -324,9 +323,26 @@
         "model.Url": {
             "type": "object",
             "properties": {
+                "clicked": {
+                    "type": "integer"
+                },
                 "id": {
                     "type": "string"
                 },
+                "lopper": {
+                    "type": "string"
+                },
+                "random": {
+                    "type": "boolean"
+                },
+                "redirect": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.UrlRequest": {
+            "type": "object",
+            "properties": {
                 "lopper": {
                     "type": "string"
                 },
