# app/model/model.go
@@ -8,6 +8,12 @@ type Url struct {
 	ID       ulid.ULID `json:"id" gorm:"primary_key" swaggertype:"string"`
 	Redirect string    `json:"redirect"`
 	Lopper   string    `json:"lopper" gorm:"unique;not null"`
-	Clicked  uint64    `json:"clicked" swaggerignore:"true"`
+	Clicked  uint64    `json:"clicked"`
 	Random   bool      `json:"random"`
+}
+
+type UrlRequest struct {
+	Redirect string `json:"redirect"`
+	Lopper   string `json:"lopper"`
+	Random   bool   `json:"random"`
 }
